updating swagger and improving response
